--- a/index.html
+++ b/index.html
@@ -4,62 +4,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yiddish Dialect Dictionary</title>
-    <script src="https://cdn.jsdelivr.net/npm/minisearch@6.2.0/dist/minisearch.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/minisearch@6.1.0/dist/umd/index.min.js"></script>
     <style>
-        body { font-family: Arial, sans-serif; line-height: 1.6; margin: 20px; }
-        input { width: 100%; padding: 10px; margin-bottom: 10px; font-size: 1em; }
-        ul { list-style: none; padding: 0; }
-        li { margin-bottom: 5px; }
-        a { text-decoration: none; color: blue; }
+        body { font-family: Arial, sans-serif; padding: 20px; }
+        input { margin-bottom: 20px; width: 300px; padding: 8px; }
+        #results { margin-top: 20px; }
+        a { text-decoration: none; color: blue; font-size: 18px; }
         a:hover { text-decoration: underline; }
     </style>
 </head>
 <body>
     <h1>Yiddish Dialect Dictionary</h1>
-    <input type="text" id="search" placeholder="Search for a headword...">
-    <ul id="results"></ul>
+    <input type="text" id="search" placeholder="Search for words...">
+    <div id="results"></div>
 
     <script>
-        // List of dictionary entries (update with your subfolder structure)
-        const dictionaryEntries = [
-            { id: 1, title: "בת", url: "dictionary/beyza/-בת.html" },
-            { id: 2, title: "בתּים", url: "dictionary/beyza/-בתּים.html" },
-            { id: 3, title: "בתולה", url: "dictionary/beyza/-בתולה.html" },
-            { id: 4, title: "בת־קול", url: "dictionary/beyza/-בת־קול.html" },
-            { id: 5, title: "בת־יחידה", url: "dictionary/beyza/-בת־יחידה.html" },
-            { id: 6, title: "בת־זקונים", url: "dictionary/beyza/-בת־זקונים.html" },
-            { id: 7, title: "גוף", url: "dictionary/gimmel/-גוף.html" },
-            { id: 8, title: "גאולה", url: "dictionary/gimmel/-גאולה.html" }
-            // Add more entries here, matching your file structure
+        // File list: Add all the words and correct paths here
+        const files = [
+            { id: 1, title: "ערהייט", url: "-ayin-\u05e2\u05d9\u05df/-\u05e2\u05e8\u05d4\u05d9\u05d8.html" },
+            { id: 2, title: "אפֿשר", url: "-ayin-\u05e2\u05d9\u05df/-\u05d0\u05e4\u05b0\u05e9\u05c1\u05e8.html" },
+            { id: 3, title: "עבֿד", url: "-ayin-\u05e2\u05d9\u05df/-\u05e2\u05d1\u05b6\u05d3.html" },
+            { id: 4, title: "עבֿודה", url: "-ayin-\u05e2\u05d9\u05df/-\u05e2\u05d1\u05b6\u05d5\u05d3\u05b0\u05d4.html" },
+            { id: 5, title: "עבֿודה־זרה", url: "-ayin-\u05e2\u05d9\u05df/-\u05e2\u05d1\u05b6\u05d5\u05d3\u05b0\u05d4\u05d6\u05e8\u05b8\u05d4.html" }
         ];
 
         // Initialize MiniSearch
         const miniSearch = new MiniSearch({
-            fields: ['title'],  // Fields to index for searching
+            idField: 'id',            // Use 'id' as the unique identifier
+            fields: ['title'],        // Fields to index for search
             storeFields: ['title', 'url']  // Fields to return in search results
         });
 
-        // Index the dictionary entries
-        miniSearch.addAll(dictionaryEntries);
+        // Add all files to the search index
+        miniSearch.addAll(files);
 
-        // Search functionality
+        // DOM Elements
         const searchInput = document.getElementById('search');
-        const resultsList = document.getElementById('results');
+        const resultsDiv = document.getElementById('results');
 
+        // Search function
         searchInput.addEventListener('input', () => {
-            const query = searchInput.value;
-            const results = miniSearch.search(query, { fuzzy: 0.2 });
+            const query = searchInput.value.trim(); // Get search query
+            const results = miniSearch.search(query); // Perform search
 
-            // Display results
-            resultsList.innerHTML = '';
-            results.forEach(result => {
-                const li = document.createElement('li');
-                li.innerHTML = `<a href="${result.url}" target="_blank">${result.title}</a>`;
-                resultsList.appendChild(li);
-            });
+            // Clear previous results
+            resultsDiv.innerHTML = '';
 
-            if (results.length === 0 && query.length > 0) {
-                resultsList.innerHTML = '<li>No results found</li>';
+            // Display new results
+            if (results.length > 0) {
+                results.forEach(result => {
+                    const link = document.createElement('a');
+                    link.href = result.url;
+                    link.textContent = result.title;
+                    link.target = '_blank';
+                    resultsDiv.appendChild(link);
+                    resultsDiv.appendChild(document.createElement('br'));
+                });
+            } else if (query) {
+                resultsDiv.textContent = 'No results found.';
             }
         });
     </script>
