--- a/index.html
+++ b/index.html
@@ -1,77 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yiddish Dialect Dictionary</title>
-    <script src="https://cdn.jsdelivr.net/npm/minisearch@6.1.0/dist/umd/index.min.js"></script>
-    <style>
-        body { font-family: Arial, sans-serif; padding: 20px; }
-        input { margin-bottom: 20px; width: 300px; padding: 8px; }
-        #results { margin-top: 20px; }
-        a { text-decoration: none; color: blue; font-size: 18px; }
-        a:hover { text-decoration: underline; }
-    </style>
-</head>
-<body>
-    <h1>Yiddish Dialect Dictionary</h1>
-    <input type="text" id="search" placeholder="Search for words...">
-    <div id="results"></div>
+fetch("files_index.json")
+    .then(response => {
+        if (!response.ok) {
+            throw new Error(`HTTP error! Status: ${response.status}`);
+        }
+        return response.json();
+    })
+    .then(files => {
+        console.log("Files loaded:", files);
+        console.log("First file entry:", files[0]);
 
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            // Load the files list dynamically from files_index.json
-            fetch("files_index.json")
-                .then(response => response.json())
-                .then(files => {
-                    console.log("Files loaded:", files);
-                    console.log("First file entry:", files[0]); // Debugging: Show the first file
+        // Check file format
+        if (!files[0]?.id || !files[0]?.title || !files[0]?.url) {
+            console.error("Error: File entries are missing required fields.");
+            alert("Invalid search index file format. Please verify 'files_index.json'.");
+            return;
+        }
 
-                    // Check the format of the loaded files
-                    if (!files[0].id || !files[0].title || !files[0].url) {
-                        console.error("Error: File entries are missing required fields (id, title, url).\nFirst file:", files[0]);
-                        alert("Search index file is invalid. Please check 'files_index.json'.");
-                        return;
-                    }
-
-                    // Initialize MiniSearch
-                    const miniSearch = new MiniSearch({
-                        idField: 'id',          // Unique ID for each document
-                        fields: ['title'],      // Fields to index for search
-                        storeFields: ['title', 'url'] // Fields to return in results
-                    });
-
-                    miniSearch.addAll(files); // Add the list to the MiniSearch index
-                    console.log("MiniSearch index created successfully.");
-
-                    const searchInput = document.getElementById('search');
-                    const resultsDiv = document.getElementById('results');
-
-                    // Search function
-                    searchInput.addEventListener('input', () => {
-                        const query = searchInput.value.trim();
-                        const results = miniSearch.search(query);
-
-                        resultsDiv.innerHTML = ''; // Clear old results
-                        if (results.length > 0) {
-                            results.forEach(result => {
-                                const link = document.createElement('a');
-                                link.href = result.url;
-                                link.textContent = result.title;
-                                link.target = '_blank';
-                                resultsDiv.appendChild(link);
-                                resultsDiv.appendChild(document.createElement('br'));
-                            });
-                        } else if (query) {
-                            resultsDiv.textContent = 'No results found.';
-                        }
-                    });
-                })
-                .catch(error => {
-                    console.error("Error loading files_index.json:", error);
-                    alert("Failed to load search index. Please check the files.");
-                });
+        // Initialize MiniSearch
+        const miniSearch = new MiniSearch({
+            idField: 'id',
+            fields: ['title'],
+            storeFields: ['title', 'url']
         });
-    </script>
-</body>
-</html>
+
+        miniSearch.addAll(files);
+
+        const searchInput = document.getElementById('search');
+        const resultsDiv = document.getElementById('results');
+
+        searchInput.addEventListener('input', () => {
+            const query = searchInput.value.trim();
+            const results = miniSearch.search(query);
+
+            resultsDiv.innerHTML = '';
+            if (results.length > 0) {
+                results.forEach(result => {
+                    const link = document.createElement('a');
+                    link.href = result.url;
+                    link.textContent = result.title;
+                    link.target = '_blank';
+                    resultsDiv.appendChild(link);
+                    resultsDiv.appendChild(document.createElement('br'));
+                });
+            } else if (query) {
+                resultsDiv.textContent = 'No results found.';
+            }
+        });
+    })
+    .catch(error => {
+        console.error("Error loading files_index.json:", error);
+        alert(`Failed to load search index: ${error.message}`);
+    });
