--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 </head>
 <body>
     <h1>Yiddish Dialect Dictionary</h1>
+
+    <!-- Search input and results container -->
     <input type="text" id="search" placeholder="Search for words...">
     <div id="results"></div>
 
@@ -30,17 +32,8 @@
             }
 
             fetch("files_index.json")
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error(`HTTP error! Status: ${response.status}`);
-                    }
-                    return response.json();
-                })
+                .then(response => response.json())
                 .then(files => {
-                    console.log("Files loaded:", files);
-                    console.log("First file entry:", files[0]);
-
-                    // Initialize MiniSearch
                     const miniSearch = new MiniSearch({
                         idField: 'id',
                         fields: ['title'],
@@ -70,7 +63,7 @@
                 })
                 .catch(error => {
                     console.error("Error loading files_index.json:", error);
-                    alert(`Failed to load search index: ${error.message}`);
+                    alert("Failed to load search index.");
                 });
         });
     </script>
